psp-migration/add-apparmor/patchedResource2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: foo
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox: runtime/default
    container.apparmor.security.beta.kubernetes.io/nginx: runtime/default
spec:
  containers:
  - name: busybox
    image: sfsdafasdfsadfsadf
  - name: nginx
    image: sfsdafasdfsadfsadf
