psp-migration/add-apparmor/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: foo
spec:
  containers:
  - name: busybox
    image: sfsdafasdfsadfsadf
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: foo
spec:
  containers:
  - name: busybox
    image: sfsdafasdfsadfsadf
  - name: nginx
    image: sfsdafasdfsadfsadf
